# quiz_server

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
counchillor/: apps.py  urls.py  views.py
counchillor/prompts/: counsel_prompt.txt
doc/: github_actions_guide.md  guestbook_api_spec.md  pdf_redactor_api_guide.md  redactor_pro_code_issuance_api.md
guestbook/: admin.py  models.py  serializers.py  urls.py  views.py
guestbook/migrations/: 0001_initial.py
home/: urls.py  views.py
home/templates/home/: index.html  pdf-redactor-pc.html
movie_recommendation/: models.py  urls.py  views.py
movie_recommendation/prompts/: ai_prompt.txt
movie_worldcup/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
movie_worldcup/migrations/: 0001_initial.py  0002_remove_worldcupinfo_image_remove_worldcupitem_image_and_more.py
pdfredactor/: apps.py  tests.py  urls.py  views.py
quiz/: models.py  views.py
quiz/migrations/: 0001_initial.py  0002_quiz_answer_quiz_body.py
quizapi/: asgi.py  settings.py  urls.py  wsgi.py
redactor_pro_code_issuance/: apps.py  jwt_utils.py  models.py  serializers.py  test_kofi_webhook.py  tests.py  urls.py  views.py
redactor_pro_code_issuance/migrations/: 0001_initial.py  0002_redeemcode_is_used.py  0003_alter_redeemcode_email.py  0004_redeemcode_uuid.py  0005_add_status_field.py
redactor_pro_code_issuance/templates/redactor_pro_code_issuance/: dashboard.html  (+1 more)
templates/admin/: base_site.html
upbit_gateway/: apps.py  signing.py  upbit_client.py  urls.py  views.py
(+2 files in other folders)
